- Navbar improvements - Changed posts template to match design - Further work on sidebar including posts enumeration

--- a/src/app/jekyll/_config.yml
+++ b/src/app/jekyll/_config.yml
@@ -13,3 +13,11 @@ markdown: kramdown
 
 collections:
     - vizsecmeta
+
+defaults:
+  -
+    scope:
+      path: "" # empty string for all files
+      type: "posts"
+    values:
+      layout: "post"
