- Worked on the responsiveness of the site; tested on iPhone and   Chrome's screensize testing functions so far - Added and linked to previous years' vizsec websites

--- a/src/app/jekyll/_data/pastyears.yml
+++ b/src/app/jekyll/_data/pastyears.yml
@@ -5,6 +5,7 @@
   location: Chicago, Illinois, USA
   date: October 26
   acceptance: 11/34 (32%)
+  website: /past/vizsec2015/ 
   proceedings: http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7310645
 
 - year: 2014 
@@ -13,6 +14,7 @@
   location: Paris, France 
   date: November 10 
   acceptance: 12/43 (28%)
+  website: /past/vizsec2014/ 
   proceedings: http://dl.acm.org/citation.cfm?id=2671491 
 
 - year: 2013
@@ -21,6 +23,7 @@
   location: Atlanta GA, USA 
   date: October 14, 2013 
   acceptance: 9/30 (30%) 
+  website: /past/vizsec2013/ 
   proceedings: ACM Digital Library 
 
 - year: 2012
@@ -29,6 +32,7 @@
   location: Seattle, WA, USA 
   date: October 15
   acceptance: 12 / 21 (57%) 
+  website: /past/vizsec2012/ 
   proceedings: http://dl.acm.org/citation.cfm?id=2379690 
 
 - year: 2011
@@ -37,6 +41,7 @@
   location: Pittsburgh, PA, USA 
   date: July 20 
   acceptance: 6 / 11 (55%)
+  website: /past/vizsec2011/ 
   proceedings: http://dl.acm.org/citation.cfm?id=2016904
 
 - year: 2010
@@ -45,6 +50,7 @@
   location: Ottawa, ON, Canada 
   date: September 14
   acceptance: 12 / 27 (44%) 
+  website: /past/vizsec2010/ 
   proceedings: http://dl.acm.org/citation.cfm?id=1850795 
 
 - year: 2009
@@ -53,6 +59,7 @@
   location: Atlantic City, NJ, USA 
   date: October 11
   acceptance: 10 / 23 (43%)
+  website: /past/vizsec2009/ 
   proceedings: http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=5368324
 
 - year: 2008
@@ -61,6 +68,7 @@
   location: Cambridge, MA, USA
   date: September 15
   acceptance: 18 / 27 (67%)
+  website: /past/vizsec2008/ 
   proceedings: http://www.springerlink.com/content/978-3-540-85931-4
 
 - year: 2007
