--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vizsec.org",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "vizsec.org web site",
   "homepage": "http://vizsec.org/",
   "author": "John Goodall <jgoodall@ornl.gov>",
@@ -16,16 +16,7 @@
   ],
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-contrib-clean": ">=0.0.1",
-    "grunt-contrib-cssmin": ">=0.14",
-    "grunt-contrib-jade": ">=0.15.0",
-    "grunt-contrib-jshint": ">=0.0.1",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "jade": ">=0.25.0"
-  },
-  "dependencies": {
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-jekyll": "^0.4.3"
+    "grunt-jekyll": "^0.4.3",
+    "grunt-contrib-copy": "^0.8.2"
   }
 }
