Set up installation instructions and improved associated configuration files to support easy installation

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ src/bower_components
 src/deploy
 src/.jekyll/
 src/.sass-cache/
-
+node_modules/
 src/app/jekyll/_site
 src/app/jekyll/.jekyll-metadata
 
