--- a/src/app/jekyll/_config.yml
+++ b/src/app/jekyll/_config.yml
@@ -8,6 +8,8 @@ url: "http://vizsec.org" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
+gems: [jekyll-paginate]
+
 paginate: 5
 paginate_path: "/blog/page:num/"
 
