Some small bugfixes to the home screen; added committee urls

--- a/src/app/jekyll/_data/committee.yml
+++ b/src/app/jekyll/_data/committee.yml
@@ -9,6 +9,7 @@
 - name: Sophie Engle
   role: Publicatations Chair
   affiliation: University of San Francisco
+  url: http://sjengle.cs.usfca.edu/
 
 - name: TBD
   role: Poster Chair
@@ -17,9 +18,11 @@
 - name: Lane Harrison
   role: Publicity Chair 
   affiliation: Worcester Polytechnic Institute
+  url: http://web.cs.wpi.edu/~ltharrison/
 
 - name: John Goodall
   role: Web Design
   affiliation: Oak Ridge National Laboratory
+  url: http://jgoodall.me/
 
 
