--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,4 +1,9 @@
 source 'https://rubygems.org'
-gem 'github-pages'
 gem 'jekyll'
 gem 'jekyll-paginate'
+
+require 'json'
+require 'open-uri'
+versions = JSON.parse(open('https://pages.github.com/versions.json').read)
+
+gem 'github-pages', versions['github-pages']
