--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "grunt": "~0.4",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-html": "^5.0.1",
-    "grunt-jekyll": "^0.4.3"
+    "grunt-jekyll": "^0.4.3",
+    "hooker": "^0.2.3"
   }
 }
