--- a/src/app/jekyll/_config.yml
+++ b/src/app/jekyll/_config.yml
@@ -13,6 +13,11 @@ gems: [jekyll-paginate]
 paginate: 5
 paginate_path: "/blog/page:num/"
 
+sass:
+  sass_dir: _sass
+  style: compressed
+      
+
 # Build settings
 markdown: kramdown
 
