--- a/src/app/jekyll/_config.yml
+++ b/src/app/jekyll/_config.yml
@@ -11,7 +11,7 @@ github_username:  jekyll
 gems: [jekyll-paginate]
 
 paginate: 5
-paginate_path: "/blog/page:num/"
+paginate_path: "/news/page:num/"
 
 sass:
   sass_dir: _sass
