--- a/src/app/jekyll/_data/committee.yml
+++ b/src/app/jekyll/_data/committee.yml
@@ -1,19 +1,25 @@
-- name: Dan Best 
+- name: Daniel M. Best 
   role: General Chair
-  affiliation: Northwest National Laboratory
+  affiliation: Pacific Northwest National Laboratory
+
+- name: Diane Staheli
+  role: Program Chair
+  affiliation: Massachusetts Institute of Technology
+  url: https://www.ll.mit.edu/mission/cybersec/cybersec-bios/staheli-bio.html
   
 - name: Nicolas Prigent
-  role: Program Chairs
+  role: Program Chair
   affiliation: CentraleSupélec
 
 - name: Sophie Engle
-  role: Publicatations Chair
+  role: Publications Chair
   affiliation: University of San Francisco
   url: http://sjengle.cs.usfca.edu/
 
-- name: TBD
+- name: Simon Walton
   role: Poster Chair
-  affiliation: To be decided 
+  affiliation: Oxford e-Research Centre
+  url: https://www.oerc.ox.ac.uk/people/simon-walton 
 
 - name: Lane Harrison
   role: Publicity Chair 
