Added sponsorship page; small committee change

--- a/src/app/jekyll/_data/committee.yml
+++ b/src/app/jekyll/_data/committee.yml
@@ -4,7 +4,7 @@
 
 - name: Diane Staheli
   role: Program Chair
-  affiliation: Massachusetts Institute of Technology
+  affiliation: MIT Lincoln Laboratory
   url: https://www.ll.mit.edu/mission/cybersec/cybersec-bios/staheli-bio.html
   
 - name: Nicolas Prigent
