Added IPC to /about

--- a/_data/ipc.yml
+++ b/_data/ipc.yml
@@ -17,7 +17,7 @@
   affiliation: Peking University 
 
 - name: Jennifer Cowley 
-  affiliation: CERT, Software 
+  affiliation: CERT, Software Engineering Institute, Carnegie Mellon University 
 
 - name: Ann Cox 
   affiliation: DHS S&T
@@ -74,7 +74,7 @@
   affiliation: Sophos 
 
 - name: Sean McKenna 
-  affiliation: University of Utah & MIT Lincoln Laboratory 
+  affiliation: University of Utah 
 
 - name: Chris Muelder 
   affiliation: University of California at Davis 
