Some more changes for IPC list, including linking to IPC list from elsewhere

--- a/_data/ipc.yml
+++ b/_data/ipc.yml
@@ -103,7 +103,7 @@
 - name: David Trimm 
   affiliation: US Department of Defense 
 
-- name: Jack van Wijk 
+- name: Jarke van Wijk 
   affiliation: Eindhoven University of Technology
 
 - name: Simon Walton 
